new release; more translations

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -185,6 +185,8 @@
 
     "FinalStarshipDetails.name.instruction": "Every Starship needs a name. There is no universal convention for the naming of ships, often naming them after locations, important historical persons (normally only the person’s surname), ancient ships, mythical figures, or even more abstract ideals, virtues, or concepts. In many cases, these vague naming conventions overlap — a ship may be named after an ancient ship that was itself named after a location, for example — but this shouldn’t cause any issues.\n\nThe name should ideally be a single word or, more rarely, two.",
 
+    "FinalStarshipDetails.registry.instruction": "Many ships have some kind of registry number to go with the name. Federation starships, for example, have a registry number that starts with NCC.",
+
     "FinalStarshipDetails.traits.instruction": "You may now define additional Traits for your starship. Your starship already has these traits:",
     "FinalStarshipDetails.traits.note": "Your GM may allow you to pick additional traits that describe your vessel. Examples include: Prototype, Legacy Vessel, Renowned and Long-Serving.",
 
@@ -994,27 +996,39 @@
 
     "Focus.animalHandling": "Animal Handling",
     "Focus.anthropology": "Anthropology",
+    "Focus.art": "Art",
     "Focus.astrometrics": "Astrometrics",
     "Focus.astronavigation": "Astronavigation",
     "Focus.astrophysics": "Astrophysics",
+    "Focus.bargain": "Bargain",
     "Focus.bureaucracy": "Bureaucracy",
     "Focus.botany": "Botany",
+    "Focus.callToAction": "Call to Action",
+    "Focus.coldReading": "Cold Reading",
     "Focus.composure": "Composure",
     "Focus.computers": "Computers",
+    "Focus.coordinatedEfforts": "Coordinated Efforts",
+    "Focus.courtingRituals": "Courting Rituals",
+    "Focus.culturalExpert": "Cultural Expert",
     "Focus.culturalStudies": "Cultural Studies",
     "Focus.cybernetics": "Cybernetics",
     "Focus.debate": "Debate",
+    "Focus.deception": "Deception",
+    "Focus.decisiveLeadership": "Decisive Leadership",
     "Focus.demolition": "Demolition",
     "Focus.diplomacy": "Diplomacy",
     "Focus.disguise": "Disguise",
     "Focus.disruptors": "Disruptors",
     "Focus.electroPlasmaPowerSystems": "Electro-Plasma Power Systems",
     "Focus.emergencyMedicine": "Emergency Medicine",
+    "Focus.emotionalIntelligence": "Emotional Intelligence",
     "Focus.espionage": "Espionage",
+    "Focus.etiquette": "Etiquette",
     "Focus.exoTectonics": "Exo-tectonics",
     "Focus.extraVehicularActivity": "Extra-Vehicular Activity",
     "Focus.evasiveAction": "Evasive Action",
     "Focus.finances": "Finances",
+    "Focus.gambling": "Gambling",
     "Focus.genetics": "Genetics",
     "Focus.geology": "Geology",
     "Focus.handPhasers": "Hand Phasers",
@@ -1027,6 +1041,7 @@
     "Focus.inspiration": "Inspiration",
     "Focus.interrogation": "Interrogation",
     "Focus.intimidation": "Intimidation",
+    "Focus.journalism": "Journalism",
     "Focus.law": "Law",
     "Focus.linguistics": "Linguistics",
     "Focus.manufacturing": "Manufacturing",
@@ -1547,15 +1562,23 @@
 
     "Specialization.admiral": "Admiral",
     "Specialization.admin": "Yeoman",
+    "Specialization.bodyguard": "Bodyguard",
+    "Specialization.bruteForHire": "Brute-for-Hire",
+    "Specialization.bureaucrat": "Bureaucrat",
     "Specialization.child": "Child",
+    "Specialization.civilianDoctor": "Medical Doctor",
+    "Specialization.colonist": "Colonist",
     "Specialization.conn": "Conn",
     "Specialization.counselor": "Counselor",
     "Specialization.civilianDoctor": "Medical Doctor",
     "Specialization.engineer": "Engineer",
+    "Specialization.federationAmbassador": "Federation Ambassador",
     "Specialization.ferengiDaiMon": "Ferengi DaiMon",
     "Specialization.ferengiMerchant": "Ferengi Merchant",
     "Specialization.firstContactSpecialist": "First Contact Specialist",
     "Specialization.hangarDeck": "Hangar Deck",
+    "Specialization.independentTraderCaptain": "Independent Trader Captain",
+    "Specialization.informationBroker": "Information Broker",
     "Specialization.intelligenceOfficer": "Intelligence Officer",
     "Specialization.jag": "Judge Advocate General's Office",
     "Specialization.klingonWarrior": "Klingon Warrior",
@@ -1564,8 +1587,11 @@
     "Specialization.klingonMedic": "Klingon Medic",
     "Specialization.medicalDoctor": "Medical Doctor",
     "Specialization.nurse": "Nurse",
+    "Specialization.orionPirate": "Orion Pirate",
     "Specialization.scienceTech": "Science Technician",
+    "Specialization.scientist": "Scientist",
     "Specialization.security": "Security",
+    "Specialization.smuggler": "Smuggler",
     "Specialization.starfleetScientist": "Scientist",
 
     "Species.aenar.name": "Aenar",
