more translation revisions

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -219,6 +219,8 @@
     "MissionProfileSelectionPage.text": "A mission profile is what makes one starship different from another in her same class. It determines the specialized equipment that is installed before venturing into the unknown, the priority in personnel that Starfleet gives the vessel, and its overall mission goal. All spaceframes have a mission profile.",
     "MissionProfileSelectionPage.errorNoSelection": "Please select a mission profile before proceeding.",
 
+    "MissionProfileTalentSelection.instruction": "Choose 1 talent from the list of talents associated with the mission profile.",
+
     "ModificationCompletePage.instruction": "The character has been modified. You can view the revised character, or make another modification.\n\nYou might want to save the URL for the revised character.",
 
     "ModificationTypeSelectionPage.instruction": "Please select the modification that you want to apply to this character:",
@@ -334,6 +336,9 @@
     "SpeciesPage.textNoRoll": "To what species do you belong? You may also create a character of mixed species, gaining benefits from both.",
     "SpeciesPage.mixedSpeciesNote": "Select two species. You will gain Traits from both species and may select from both species' Talents, but only the primary species gives you Attribute bonuses.",
     "SpeciesPage.selectTwoSpeciesError": "Please select both a primary and secondary species",
+
+    "StarshipRefits.instruction_one": "Ships are improved over time. Every ten years from the date of launch, a ship receives a refit, which improves the ship's systems.\n\nYou have {{count}} point to allocate.",
+    "StarshipRefits.instruction_other": "Ships are improved over time. Every ten years from the date of launch, a ship receives a refit, which improves the ship's systems.\n\nYou have {{count}} points to allocate.",
 
     "StarshipTalentSelection.instruction_one": "Please select {{count}} talent.",
     "StarshipTalentSelection.instruction_other": "Please select {{count}} talents.",
@@ -999,16 +1004,24 @@
     "Focus.art": "Art",
     "Focus.astrometrics": "Astrometrics",
     "Focus.astronavigation": "Astronavigation",
+    "Focus.astronomy": "Astronomy",
     "Focus.astrophysics": "Astrophysics",
+    "Focus.atmosphericFlight": "Atmospheric Flight",
+    "Focus.attackRun": "Attack Run",
     "Focus.bargain": "Bargain",
-    "Focus.bureaucracy": "Bureaucracy",
     "Focus.botany": "Botany",
+    "Focus.boatPilotSubmersibles": "Boat Pilot / Submersibles",
+    "Focus.bureaucracy": "Bureaucracy",
     "Focus.callToAction": "Call to Action",
+    "Focus.climbing": "Climbing",
     "Focus.coldReading": "Cold Reading",
+    "Focus.combatManeuvers": "Combat Maneuvers",
+    "Focus.communicationsSystems": "Communications Systems",
     "Focus.composure": "Composure",
     "Focus.computers": "Computers",
     "Focus.coordinatedEfforts": "Coordinated Efforts",
     "Focus.courtingRituals": "Courting Rituals",
+    "Focus.coveringAdvance": "Covering Advance",
     "Focus.culturalExpert": "Cultural Expert",
     "Focus.culturalStudies": "Cultural Studies",
     "Focus.cybernetics": "Cybernetics",
@@ -1019,18 +1032,24 @@
     "Focus.diplomacy": "Diplomacy",
     "Focus.disguise": "Disguise",
     "Focus.disruptors": "Disruptors",
+    "Focus.efficientEvasion": "Efficient Evasion",
     "Focus.electroPlasmaPowerSystems": "Electro-Plasma Power Systems",
     "Focus.emergencyMedicine": "Emergency Medicine",
     "Focus.emotionalIntelligence": "Emotional Intelligence",
     "Focus.espionage": "Espionage",
     "Focus.etiquette": "Etiquette",
+    "Focus.evacuationProcedures": "Evacuation Procedures",
+    "Focus.evasiveAction": "Evasive Action",
     "Focus.exoTectonics": "Exo-tectonics",
     "Focus.extraVehicularActivity": "Extra-Vehicular Activity",
-    "Focus.evasiveAction": "Evasive Action",
     "Focus.finances": "Finances",
+    "Focus.flightController": "Flight Controller",
     "Focus.gambling": "Gambling",
     "Focus.genetics": "Genetics",
     "Focus.geology": "Geology",
+    "Focus.glancingImpact": "Glancing Impact",
+    "Focus.groundVehicles": "Ground Vehicles",
+    "Focus.guidanceSystems": "Guidance Systems",
     "Focus.handPhasers": "Hand Phasers",
     "Focus.handToHandCombat": "Hand-to-Hand Combat",
     "Focus.helmOperation": "Helm Operation",
@@ -1041,39 +1060,68 @@
     "Focus.inspiration": "Inspiration",
     "Focus.interrogation": "Interrogation",
     "Focus.intimidation": "Intimidation",
+    "Focus.impulseEngines": "Impulse Engines",
     "Focus.journalism": "Journalism",
     "Focus.law": "Law",
+    "Focus.leadByExample": "Lead by Example",
     "Focus.linguistics": "Linguistics",
     "Focus.manufacturing": "Manufacturing",
+    "Focus.mentalDiscipline": "Mental Discipline",
     "Focus.metallurgy": "Metallurgy",
+    "Focus.multiDiscipline": "Multi-Discipline",
+    "Focus.multiTasking": "Multi-Tasking",
     "Focus.music": "Music",
     "Focus.negotiation": "Negotiation",
     "Focus.observation": "Observation",
+    "Focus.oratory": "Oratory",
+    "Focus.pathfinder": "Pathfinder",
+    "Focus.performer": "Performer",
     "Focus.persuasion": "Persuasion",
     "Focus.philosophy": "Philosophy",
     "Focus.physics": "Physics",
     "Focus.politics": "Politics",
+    "Focus.powerManagement": "Power Management",
     "Focus.powerSystems": "Power Systems",
+    "Focus.precisionManeuvering": "Precision Maneuvering",
+    "Focus.primeDirective": "Prime Directive",
     "Focus.psychiatry": "Psychiatry",
     "Focus.psychology": "Psychology",
     "Focus.quantumMechanics": "Quantum Mechanics",
     "Focus.rapidAnalysis": "Rapid Analysis",
+    "Focus.repairsAndMaintenance": "Repairs and Maintenance",
+    "Focus.reportingProcedures": "Reporting Procedures",
+    "Focus.rhetoric": "Rhetoric",
     "Focus.shipboardTacticalSystems": "Shipboard Tactical Systems",
+    "Focus.shipDesignAndConstruction": "Ship Design and Construction",
+    "Focus.shuttlebayManagement": "Shuttlebay Management",
     "Focus.smallCraft": "Small Craft",
+    "Focus.spaceStationOperations": "Space Station Operations",
+    "Focus.spacewalk": "Spacewalk",
+    "Focus.starshipExpertPickOne": "Starship Expert (pick one)",
     "Focus.starshipRecognition": "Starship Recognition",
     "Focus.starfleetProtocols": "Starfleet Protocols",
+    "Focus.stationOperations": "Station Operations",
+    "Focus.strategyTactics": "Strategy/Tactics",
+    "Focus.stellarCartography": "Stellar Cartography",
+    "Focus.strafingRun": "Strafing Run",
     "Focus.structuralEngineering": "Structural Engineering",
     "Focus.subspaceCommunications": "Subspace Communications",
+    "Focus.subspaceTheory": "Subspace Theory",
     "Focus.surgery": "Surgery",
     "Focus.survey": "Survey",
     "Focus.survival": "Survival",
+    "Focus.teaching": "Teaching",
     "Focus.teamDynamics": "Team Dynamics",
     "Focus.threatAnalysis": "Threat Analysis",
+    "Focus.timeManagement": "Time Management",
+    "Focus.tracking": "Tracking",
     "Focus.traumaSurgery": "Trauma Surgery",
     "Focus.transportersReplicators": "Transporters & Replicators",
     "Focus.virology": "Virology",
+    "Focus.warpDrive": "Warp Drive",
     "Focus.warpFieldDynamics": "Warp Field Dynamics",
     "Focus.xenobiology": "Xenobiology",
+    "Focus.zeroGCombat": "Zero-G Combat",
 
     "GovernmentType.name.andorian": "Andorian",
     "GovernmentType.name.bajoran": "Bajoran",
