initial version of the random starship generator

--- a/WebTools/src/i18n/locales/en/translations.json
+++ b/WebTools/src/i18n/locales/en/translations.json
@@ -239,6 +239,8 @@
 
     "PromotionPage.instruction": "Select a new rank for this character.",
 
+    "RandomStarshipPage.instructions": "Specify what kind of starship you're trying to create.",
+
     "ReputationChangePage.instruction": "Adjust the character's reputation as appropriate.",
 
     "SafetyChecklist.instruction": "This checklist is a tool which the gamemaster can use to help players in discussing where their personal boundaries for certain themes in this campaign may lie.\n\n- **Always OK**: This means the player is always comfortable with this topic being described, shown and represented in a game.\n\n- **Yellow Alert**: This means the player is generally comfortable with this topic being discussed in a game, but prefers for the more vivid descriptions to be handled “off-screen.”\n\n- **Red Alert**: This means the player does not want this subject to be discussed in a game; they may have any number of reasons for this. Some reasons may include objection to the topic on moral principles, traumatic personal experience, a dislike of the topic being trivialized in a fictional entertainment medium like a game, and so on. Don’t ask  what the reason is for the player who feels this way; it isn’t anyone’s place to change that player’s mind. Simply accept their stance, respect it, and do not include the topic in question.",
@@ -390,6 +392,7 @@
     "ToolSelection.starship": "Starship",
     "ToolSelection.spaceSector": "Space Sector",
     "ToolSelection.randomNpc": "Random NPC",
+    "ToolSelection.randomStarship": "Random Starship",
 
     "Common.button.random": "Random",
     "Common.button.select": "Select",
@@ -557,6 +560,7 @@
     "Page.title.missionProfileSelection": "Mission Profile Selection",
     "Page.title.missionProfileTalentSelection": "Mission Profile Talent",
     "Page.title.otherTools": "Other Tools",
+    "Page.title.randomStarship": "Random Starship Configuration",
     "Page.title.sectorDetails": "Sector Details",
     "Page.title.simpleStarship": "Simplified Starship Creation",
     "Page.title.smallCraftStats": "Small Craft Stats",
@@ -574,6 +578,8 @@
     "Page.title.species": "Species",
     "Page.title.speciesDetails": "Species Details",
     "Page.title.starshipTalentSelection": "Starship Talents",
+    "Page.title.starshipTypeSelection": "Starship Type",
+    "Page.title.starshipWeaponsSelection": "Starship Weapons",
     "Page.title.starSystemDetails": "Star System Details",
     "Page.title.starshipToolSelection": "Starship Tool Selection",
     "Page.title.starshipTraits": "Starship Traits",
@@ -583,8 +589,6 @@
     "Page.title.talentsOverview": "Talents Overview",
     "Page.title.toolSelection": "Tool Selection",
     "Page.title.viewSheet": "View Sheet",
-    "Page.title.starshipTypeSelection": "Starship Type",
-    "Page.title.starshipWeaponsSelection": "Starship Weapons",
     "Page.title.modificationTypeSelection": "Modification Type",
     "Page.title.reputationChange": "Reputation Change",
     "Page.title.promotion": "Promotion",
@@ -999,6 +1003,7 @@
     "ExtraType.zaraniteMask": "Zaranite Breather Mask",
     "ExtraType.ferengiHeadFlap": "Ferengi Head Flap",
 
+    "Focus.ambushTactics": "Ambush Tactics",
     "Focus.animalHandling": "Animal Handling",
     "Focus.anthropology": "Anthropology",
     "Focus.art": "Art",
@@ -1009,25 +1014,35 @@
     "Focus.atmosphericFlight": "Atmospheric Flight",
     "Focus.attackRun": "Attack Run",
     "Focus.bargain": "Bargain",
+    "Focus.bladeWeapons": "Blade Weapons",
     "Focus.botany": "Botany",
     "Focus.boatPilotSubmersibles": "Boat Pilot / Submersibles",
     "Focus.bureaucracy": "Bureaucracy",
     "Focus.callToAction": "Call to Action",
+    "Focus.camouflage": "Camouflage",
     "Focus.climbing": "Climbing",
+    "Focus.chemicalAndBiologicalWeapons": "Chemical and Biological Weapons",
     "Focus.coldReading": "Cold Reading",
     "Focus.combatManeuvers": "Combat Maneuvers",
+    "Focus.combatMedic": "Combat Medic",
     "Focus.communicationsSystems": "Communications Systems",
     "Focus.composure": "Composure",
     "Focus.computers": "Computers",
+    "Focus.computerSecuritySystems": "Computer Security Systems",
     "Focus.coordinatedEfforts": "Coordinated Efforts",
     "Focus.courtingRituals": "Courting Rituals",
     "Focus.coveringAdvance": "Covering Advance",
+    "Focus.criminalMinds": "Criminal Minds",
+    "Focus.criminalOrganizations": "Criminal Organizations",
+    "Focus.crisisManagement": "Crisis Management",
     "Focus.culturalExpert": "Cultural Expert",
     "Focus.culturalStudies": "Cultural Studies",
     "Focus.cybernetics": "Cybernetics",
+    "Focus.deadeyeMarksman": "Deadeye Marksman",
     "Focus.debate": "Debate",
     "Focus.deception": "Deception",
     "Focus.decisiveLeadership": "Decisive Leadership",
+    "Focus.deflectorOperations": "Deflector Operations",
     "Focus.demolition": "Demolition",
     "Focus.diplomacy": "Diplomacy",
     "Focus.disguise": "Disguise",
@@ -1043,7 +1058,10 @@
     "Focus.exoTectonics": "Exo-tectonics",
     "Focus.extraVehicularActivity": "Extra-Vehicular Activity",
     "Focus.finances": "Finances",
+    "Focus.fleetFormations": "Fleet Formations",
     "Focus.flightController": "Flight Controller",
+    "Focus.forensics": "Forensics",
+    "Focus.forgery": "Forgery",
     "Focus.gambling": "Gambling",
     "Focus.genetics": "Genetics",
     "Focus.geology": "Geology",
@@ -1052,6 +1070,8 @@
     "Focus.guidanceSystems": "Guidance Systems",
     "Focus.handPhasers": "Hand Phasers",
     "Focus.handToHandCombat": "Hand-to-Hand Combat",
+    "Focus.hazardousEnvironments": "Hazardous Environments",
+    "Focus.heavyCover": "Heavy Cover",
     "Focus.helmOperation": "Helm Operation",
     "Focus.history": "History",
     "Focus.holoprogramming": "Holoprogramming",
@@ -1062,27 +1082,38 @@
     "Focus.intimidation": "Intimidation",
     "Focus.impulseEngines": "Impulse Engines",
     "Focus.journalism": "Journalism",
+    "Focus.klingonWeapons": "Klingon Weapons",
     "Focus.law": "Law",
+    "Focus.lawEnforcement": "Law Enforcement",
     "Focus.leadByExample": "Lead by Example",
+    "Focus.leadInvestigator": "Lead Investigator",
     "Focus.linguistics": "Linguistics",
     "Focus.manufacturing": "Manufacturing",
+    "Focus.martialArts": "Martial Arts",
     "Focus.mentalDiscipline": "Mental Discipline",
+    "Focus.mentalResistanceTechniques": "Mental Resistance Techniques",
     "Focus.metallurgy": "Metallurgy",
     "Focus.multiDiscipline": "Multi-Discipline",
     "Focus.multiTasking": "Multi-Tasking",
     "Focus.music": "Music",
     "Focus.negotiation": "Negotiation",
     "Focus.observation": "Observation",
+    "Focus.organizationalPsychology": "Organizational Psychology",
     "Focus.oratory": "Oratory",
     "Focus.pathfinder": "Pathfinder",
+    "Focus.patrol": "Patrol",
     "Focus.performer": "Performer",
     "Focus.persuasion": "Persuasion",
+    "Focus.phasers": "Phasers",
     "Focus.philosophy": "Philosophy",
     "Focus.physics": "Physics",
+    "Focus.pickpocketing": "Pickpocketing",
+    "Focus.planetarySurveys": "Planetary Surveys",
     "Focus.politics": "Politics",
     "Focus.powerManagement": "Power Management",
     "Focus.powerSystems": "Power Systems",
     "Focus.precisionManeuvering": "Precision Maneuvering",
+    "Focus.precisionTargeting": "Precision Targeting",
     "Focus.primeDirective": "Prime Directive",
     "Focus.psychiatry": "Psychiatry",
     "Focus.psychology": "Psychology",
@@ -1091,8 +1122,11 @@
     "Focus.repairsAndMaintenance": "Repairs and Maintenance",
     "Focus.reportingProcedures": "Reporting Procedures",
     "Focus.rhetoric": "Rhetoric",
+    "Focus.securitySystems": "Security Systems",
     "Focus.shipboardTacticalSystems": "Shipboard Tactical Systems",
     "Focus.shipDesignAndConstruction": "Ship Design and Construction",
+    "Focus.shipEngagementTactics": "Ship Engagement Tactics",
+    "Focus.shipLockdownProcedures": "Ship Lockdown Procedures",
     "Focus.shuttlebayManagement": "Shuttlebay Management",
     "Focus.smallCraft": "Small Craft",
     "Focus.spaceStationOperations": "Space Station Operations",
@@ -1101,6 +1135,7 @@
     "Focus.starshipRecognition": "Starship Recognition",
     "Focus.starfleetProtocols": "Starfleet Protocols",
     "Focus.stationOperations": "Station Operations",
+    "Focus.strategy": "Strategy",
     "Focus.strategyTactics": "Strategy/Tactics",
     "Focus.stellarCartography": "Stellar Cartography",
     "Focus.strafingRun": "Strafing Run",
@@ -1110,10 +1145,12 @@
     "Focus.surgery": "Surgery",
     "Focus.survey": "Survey",
     "Focus.survival": "Survival",
+    "Focus.targetingSystems": "Targeting Systems",
     "Focus.teaching": "Teaching",
     "Focus.teamDynamics": "Team Dynamics",
     "Focus.threatAnalysis": "Threat Analysis",
     "Focus.timeManagement": "Time Management",
+    "Focus.torpedoes": "Torpedoes",
     "Focus.tracking": "Tracking",
     "Focus.traumaSurgery": "Trauma Surgery",
     "Focus.transportersReplicators": "Transporters & Replicators",
