--- a/WebTools/src/i18n/locales/fr/translations.json
+++ b/WebTools/src/i18n/locales/fr/translations.json
@@ -553,6 +553,8 @@
     "Page.title.species": "Espèce",
     "Page.title.speciesDetails": "Détail de l'Espèce",
     "Page.title.starshipTalentSelection": "Talents de Vaisseau",
+    "Page.title.starshipTypeSelection": "Type de Vaisseau",
+    "Page.title.starshipWeaponsSelection": "Armes de Vaisseau",
     "Page.title.starSystemDetails": "Détails du système stellaire",
     "Page.title.starshipToolSelection": "Outils de vaisseau spatial",
     "Page.title.starshipTraits": "Traits du vaisseau",
@@ -562,8 +564,6 @@
     "Page.title.talentsOverview": "Vue d'ensemble des talents",
     "Page.title.toolSelection": "Selection d'Outil",
     "Page.title.viewSheet": "Voir la feuille",
-    "Page.title.starshipTypeSelection": "Type de Vaisseau",
-    "Page.title.starshipWeaponsSelection": "Armes de Vaisseau",
     "Page.title.modificationTypeSelection": "Type de modification",
     "Page.title.reputationChange": "Changer la Réputation",
     "Page.title.promotion": "Promotion",
@@ -858,30 +858,56 @@
 
     "Focus.animalHandling": "Comportement animal",
     "Focus.anthropology": "Anthropologie",
+    "Focus.art": "Art",
     "Focus.astrometrics": "Astrométrique",
     "Focus.astronavigation": "Astronavigation",
+    "Focus.astronomy": "Astronomy",
     "Focus.astrophysics": "Astrophysique",
+    "Focus.atmosphericFlight": "Vol Atmosphérique",
+    "Focus.attackRun": "Charge",
+    "Focus.bargain": "Marchandage",
     "Focus.botany": "Botanique",
+    "Focus.boatPilotSubmersibles": "Pilotage de bateau / sous-marin",
     "Focus.bureaucracy": "Bureaucracie",
+    "Focus.callToAction": "Motivation",
+    "Focus.climbing": "Escalade",
+    "Focus.coldReading": "Lecture à froid",
+    "Focus.combatManeuvers": "Manoeuvres de combat",
+    "Focus.communicationsSystems": "Systemes de communication",
     "Focus.composure": "Maitrise de soi",
     "Focus.computers": "Informatique",
+    "Focus.coordinatedEfforts": "Coordination des efforts",
+    "Focus.courtingRituals": "Rituels de séduction",
+    "Focus.coveringAdvance": "Avance de couverture",
+    "Focus.culturalExpert": "Expert culturel",
     "Focus.culturalStudies": "Etudes culturelles",
     "Focus.cybernetics": "Cybernetique",
     "Focus.debate": "Débat",
+    "Focus.deception": "Tromperie",
+    "Focus.decisiveLeadership": "Commandement décisif",
     "Focus.demolition": "Démolition",
     "Focus.diplomacy": "Diplomacie",
     "Focus.disguise": "Déguisement",
     "Focus.disruptors": "Disrupteurs",
+    "Focus.efficientEvasion": "Efficacité d'évasion",
     "Focus.electroPlasmaPowerSystems": "Systèmes d'Alimentations Electro-Plasmiques",
     "Focus.emergencyMedicine": "Médecine d'Urgence",
+    "Focus.emotionalIntelligence": "Intelligence émotionnelle",
     "Focus.espionage": "Espionnage",
+    "Focus.etiquette": "Etiquette",
+    "Focus.evacuationProcedures": "Procédures d'évacuation",
     "Focus.evasiveAction": "Action d'évasion",
     "Focus.exoTectonics": "Exo-tectonique",
     "Focus.extraVehicularActivity": "Activités Extra-Vehiculaires ",
     "Focus.finances": "Finances",
+    "Focus.flightController": "Contrôleur de vol",
+    "Focus.gambling": "Pari",
     "Focus.genetics": "Genetique",
     "Focus.geology": "Géologie",
-    "Focus.handPhasers": " Phaseurs de Poing",
+    "Focus.glancingImpact": "Impact",
+    "Focus.groundVehicles": "Véhicules terrestres",
+    "Focus.guidanceSystems": "Systèmes de guidage",
+    "Focus.handPhasers": "Phaseurs de Poing",
     "Focus.handToHandCombat": "Combat à mains nues",
     "Focus.helmOperation": "Timonerie",
     "Focus.history": "Histoire",
@@ -891,38 +917,68 @@
     "Focus.inspiration": "Inspiration",
     "Focus.interrogation": "Interrogation",
     "Focus.intimidation": "Intimidation",
+    "Focus.impulseEngines": "Moteurs a impulsion",
+    "Focus.journalism": "Journalisme",
     "Focus.law": "Droit",
+    "Focus.leadByExample": "Montrer l'exemple",
     "Focus.linguistics": "Linguistique",
     "Focus.manufacturing": "Fabrication",
+    "Focus.mentalDiscipline": "Discipline mentale",
     "Focus.metallurgy": "Metallurgie",
+    "Focus.multiDiscipline": "Multi-Discipline",
+    "Focus.multiTasking": "Organisation Multi Tache",
     "Focus.music": "Musique",
     "Focus.negotiation": "Négotiation",
     "Focus.observation": "Observation",
+    "Focus.oratory": "Orateur",
+    "Focus.pathfinder": "Eclaireur",
+    "Focus.performer": "Artiste de spectacle",
     "Focus.persuasion": "Persuasion",
     "Focus.philosophy": "Philosophie",
     "Focus.physics": "Physique",
     "Focus.politics": "Politique",
+    "Focus.powerManagement": "Gestion de l'énergie",
     "Focus.powerSystems": "Systèmes d'alimentation",
+    "Focus.precisionManeuvering": "Manoeuvres de précision",
+    "Focus.primeDirective": "Directive première",
     "Focus.psychiatry": "Psychiatrie",
     "Focus.psychology": "Psychologie",
     "Focus.quantumMechanics": "Mechanique Quantique",
     "Focus.rapidAnalysis": "Analyse Rapide",
+    "Focus.repairsAndMaintenance": "Réparations et maintenance",
+    "Focus.reportingProcedures": "Procédures d'établissement de rapports",
+    "Focus.rhetoric": "Réthorique",
     "Focus.shipboardTacticalSystems": "Systèmes Tactiques de Bord",
+    "Focus.shipDesignAndConstruction": "Construction et conception de vaisseaux",
+    "Focus.shuttlebayManagement": "Gestion de hangars à navettes",
     "Focus.smallCraft": "Petit Vaisseau",
+    "Focus.spaceStationOperations": "Opérations de stations spatiales",
+    "Focus.spacewalk": "Sortie dans l'espace",
+    "Focus.starshipExpertPickOne": "Expert de vaisseau (en choisir un)",
     "Focus.starshipRecognition": "Reconnaissance des Vaisseaux",
     "Focus.starfleetProtocols": "Protocoles de Starfleet ",
+    "Focus.stationOperations": "Opérations de stations",
+    "Focus.strategyTactics": "Stratégie / Tactique",
+    "Focus.stellarCartography": "Cartographie stellaire.",
+    "Focus.strafingRun": "Mitraillage",
     "Focus.structuralEngineering": "Ingénierie Structurelle",
     "Focus.subspaceCommunications": "Communications Subspaciales",
+    "Focus.subspaceTheory": "Théorie subspatiale",
     "Focus.surgery": "Chirurgie",
     "Focus.survey": "Enquête",
     "Focus.survival": "Survie",
+    "Focus.teaching": "Enseignement",
     "Focus.teamDynamics": "Dynamique d'équipe",
     "Focus.threatAnalysis": "Analyse des Menaces",
+    "Focus.timeManagement": "Gestion du temps",
+    "Focus.tracking": "Pistage",
     "Focus.traumaSurgery": "Chirurgie Traumatique",
     "Focus.transportersReplicators": "Transporteurs & Réplicateurs",
     "Focus.virology": "Virologie",
+    "Focus.warpDrive": "Moteurs aà distortion",
     "Focus.warpFieldDynamics": "Dynamique des Champs de Distorsion",
     "Focus.xenobiology": "Xenobiologie",
+    "Focus.zeroGCombat": "Combat Zéro G",
 
     "GovernmentType.name.andorian": "Andorien",
     "GovernmentType.name.bajoran": "Bajoran",
@@ -1188,7 +1244,7 @@
     "Source.type.coreBook": "Livres de Règles ",
     "Source.type.divisionBook": "Livres des Divisions",
     "Source.type.quadrantBook": "Livres des Quadrants",
-    "Source.type.crewBook": "Lives d'Equipages",
+    "Source.type.crewBook": "Livres d'Equipages",
     "Source.type.campaignBook": "Livres de Campagne",
     "Source.type.expansion": "Livres d'Extensions",
     "Source.type.misc": "Divers/Autres",
@@ -1346,7 +1402,7 @@
     "Species.deltan.name": "Deltan",
 
     "Species.denobulan.name": "Dénobulien",
-    "Species.denobulan.aboutNames": "Les DÉNOBULIENS ont en général un seul nom, étant donné qu’un individu peut faire partie de plusieurs familles entrecroisées. Certains Dénobuliens accolent le nom de l’un de leurs conjoints et en font une sorte de surnom, mais cette habitude indique souvent une association avec des espèces qui ne comprennent pas le fonctionnement de leur structure familiale. Leurs noms sont en général courts et ils ont des sonorités dures, en particulier les prénoms masculins.",
+    "Species.denobulan.aboutNames": "Les Dénobuliens ont en général un seul nom, étant donné qu’un individu peut faire partie de plusieurs familles entrecroisées. Certains Dénobuliens accolent le nom de l’un de leurs conjoints et en font une sorte de surnom, mais cette habitude indique souvent une association avec des espèces qui ne comprennent pas le fonctionnement de leur structure familiale. Leurs noms sont en général courts et ils ont des sonorités dures, en particulier les prénoms masculins.",
     "Species.denobulan.description": "La planète Dénobula est alliée à l’humanité depuis les années 2130 et si elle ne figure pas parmi les fondateurs de la Fédération, elle l’a rejointe peu de temps après. Ce peuple, sociable, grégaire et curieux a des traits expressifs et distinctifs. Il vit traditionnellement dans des communautés étroitement liées, et au sein de larges et complexes groupes familiaux étendus. Un Dénobulien a plusieurs épouses, qui ont elles-mêmes plusieurs partenaires, et qui ont ensemble des douzaines d’enfants. Ils sont culturellement curieux, perspicaces et intéressés par un large éventail de philosophies, mais à cause de leur tempérament studieux, de leurs grandes familles et de leur nature grégaire, ils quittent rarement leur monde natal pour s’aventurer dans l’univers.",
     "Species.denobulan.exampleValue": "La sécurité dans le nombre.",
     "Species.denobulan.traitDescription": "Les Dénobuliens ont un solide système immunitaire, mais une certaine vulnérabilité aux différentes formes d’empoisonnement par les radiations. Grimpeurs naturels et talentueux, ils sont capables d’escalader les parois abruptes comme certains lézards terrestres. Les Dénobuliens n’ont pas besoin de dormir ; ils doivent pourtant hiberner plusieurs jours par an et seront désorientés s’ils sont obligés de rester éveillés au cours de cette période",
